[gd_scene load_steps=19 format=4 uid="uid://mfmhytite3rx"]

[ext_resource type="Texture2D" uid="uid://cbd7sikanj1cn" path="res://assets/32rogues/tiles.png" id="1_1j2bm"]
[ext_resource type="PackedScene" uid="uid://ck1auwqa8cl0c" path="res://scenes/player_type/rogue_type.tscn" id="1_3au3l"]
[ext_resource type="Script" path="res://scripts/character_selection.gd" id="1_6qven"]
[ext_resource type="PackedScene" uid="uid://coxtxpj8ay5h5" path="res://scenes/player.tscn" id="2_ojtev"]
[ext_resource type="PackedScene" uid="uid://cyhrrq4evgdil" path="res://scenes/player_type/barbarian_type.tscn" id="3_in3f3"]
[ext_resource type="Texture2D" uid="uid://ci66aa0snhn45" path="res://assets/32rogues/gems/red.png" id="6_f0kvo"]
[ext_resource type="PackedScene" uid="uid://cxqx7mqyk6krt" path="res://scenes/player_type/mage_type.tscn" id="6_jnjga"]
[ext_resource type="Texture2D" uid="uid://cxldoai10a4l2" path="res://assets/32rogues/gems/blue.png" id="7_1oj0d"]
[ext_resource type="PackedScene" uid="uid://bjqus2w8mosb0" path="res://scenes/player_type/knight_type.tscn" id="7_7gxew"]
[ext_resource type="Texture2D" uid="uid://bia86h43fmf6r" path="res://assets/32rogues/gems/green.png" id="8_f5bhh"]
[ext_resource type="Texture2D" uid="uid://bs1dp3g861s56" path="res://assets/32rogues/gems/yellow.png" id="9_50p6t"]
[ext_resource type="Texture2D" uid="uid://dja47v3hj8gr1" path="res://assets/32rogues/pieces/coin_1.png" id="10_d0rf8"]
[ext_resource type="FontFile" uid="uid://bfq4w63uob47b" path="res://assets/alagard.ttf" id="11_4xv2l"]
[ext_resource type="Texture2D" uid="uid://i3eeeht3uke4" path="res://assets/32rogues/material/wood.png" id="12_d5rmp"]
[ext_resource type="Texture2D" uid="uid://lqlk1lbr7h6e" path="res://assets/32rogues/material/stone.png" id="13_041bv"]
[ext_resource type="Texture2D" uid="uid://b7k04kdav7ru6" path="res://assets/32rogues/material/iron2.png" id="14_w15ji"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_owe06"]
texture = ExtResource("1_1j2bm")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
0:3/0 = 0
1:3/0 = 0
0:4/0 = 0
1:4/0 = 0
0:5/0 = 0
1:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
0:18/0 = 0
1:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
0:20/0 = 0
1:20/0 = 0
0:21/0 = 0
1:21/0 = 0
0:22/0 = 0
1:22/0 = 0

[sub_resource type="TileSet" id="TileSet_gehps"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_owe06")

[node name="CharacterSelection" type="Node2D"]
script = ExtResource("1_6qven")

[node name="Background" type="Node2D" parent="."]
position = Vector2(622, 30)

[node name="DungeonTiles" type="TileMapLayer" parent="Background"]
position = Vector2(12, -28)
scale = Vector2(5, 5)
tile_map_data = PackedByteArray("AAD7/wYAAAAAAAYAAAD6////AAAAAAEAAAD6/wAAAAAAAAEAAAD6/wEAAAABAAEAAAD6/wIAAAAAAAYAAAD6/wMAAAAAAAYAAAD6/wQAAAAAAAYAAAD6/wUAAAAAAAYAAAD6/wYAAAAAAAYAAAD6/wcAAAAAAAYAAAD7////AAAAAAEAAAD7/wAAAAAAAAEAAAD7/wEAAAABAAEAAAD7/wIAAAAAAAYAAAD7/wMAAAAAAAYAAAD7/wQAAAACAAcAAAD7/wUAAAAAAAYAAAD7/wcAAAAAAAYAAAD8////AAAAAAEAAAD8/wAAAAAAAAEAAAD8/wEAAAABAAEAAAD8/wIAAAAAAAYAAAD8/wMAAAAAAAYAAAD8/wQAAAAAAAYAAAD8/wUAAAACAAoAAAD8/wYAAAAAAAYAAAD8/wcAAAAAAAYAAAD9////AAAAAAEAAAD9/wAAAAAAAAEAAAD9/wEAAAABAAEAAAD9/wIAAAACAAcAAAD9/wMAAAAAAAYAAAD9/wQAAAAAAAYAAAD9/wUAAAAAAAYAAAD9/wYAAAAAAAYAAAD9/wcAAAAAAAYAAAD+////AAAAAAEAAAD+/wAAAAAAAAEAAAD+/wEAAAABAAEAAAD+/wIAAAAAAAYAAAD+/wMAAAAAAAYAAAD+/wQAAAAAAAYAAAD+/wUAAAAAAAYAAAD+/wYAAAAAAAYAAAD+/wcAAAAAAAYAAAD/////AAAAAAEAAAD//wAAAAAAAAEAAAD//wEAAAABAAEAAAD//wIAAAAAAAYAAAD//wMAAAADAAYAAAD//wQAAAAAAAYAAAD//wUAAAAAAAYAAAD//wYAAAAAAAYAAAD//wcAAAAAAAYAAAAAAP//AAAAAAEAAAAAAAAAAAAAAAEAAAAAAAEAAAABAAEAAAAAAAIAAAAAAAYAAAAAAAMAAAAAAAYAAAAAAAQAAAAAAAYAAAAAAAUAAAAAAAYAAAAAAAYAAAAAAAYAAAAAAAcAAAAAAAYAAAABAP//AAAAAAEAAAABAAAAAAAAAAEAAAABAAEAAAABAAEAAAABAAIAAAAAAAYAAAABAAMAAAAAAAYAAAABAAQAAAACAAkAAAABAAUAAAAAAAYAAAABAAYAAAAAAAYAAAABAAcAAAAAAAYAAAACAP//AAAAAAEAAAACAAAAAAAAAAEAAAACAAEAAAABAAEAAAACAAIAAAAAAAYAAAACAAMAAAAAAAYAAAACAAQAAAAAAAYAAAACAAUAAAAAAAYAAAACAAYAAAAAAAYAAAACAAcAAAAAAAYAAAADAP//AAAAAAEAAAADAAAAAAAAAAEAAAADAAEAAAABAAEAAAADAAIAAAADAAkAAAADAAMAAAAAAAYAAAADAAQAAAAAAAYAAAADAAUAAAADAAoAAAADAAYAAAAAAAYAAAADAAcAAAAAAAYAAAAEAP//AAAAAAEAAAAEAAAAAAAAAAEAAAAEAAEAAAABAAEAAAAEAAIAAAAAAAYAAAAEAAMAAAAAAAYAAAAEAAQAAAAAAAYAAAAEAAUAAAAAAAYAAAAEAAYAAAAAAAYAAAAEAAcAAAAAAAYAAAAFAP//AAAAAAEAAAAFAAAAAAAAAAEAAAAFAAEAAAABAAEAAAAFAAIAAAAAAAYAAAAFAAMAAAAAAAYAAAAFAAQAAAAAAAYAAAAFAAUAAAAAAAYAAAAFAAYAAAAAAAYAAAAFAAcAAAAAAAYAAAAGAP//AAAAAAEAAAAGAAAAAAAAAAEAAAAGAAEAAAABAAEAAAAGAAIAAAAAAAYAAAAGAAMAAAAAAAYAAAAGAAQAAAAAAAYAAAAGAAUAAAAAAAYAAAAGAAYAAAAAAAYAAAAGAAcAAAAAAAYAAAAHAP//AAAAAAEAAAAHAAAAAAAAAAEAAAAHAAEAAAABAAEAAAAHAAIAAAACAAcAAAAHAAMAAAAAAAYAAAAHAAQAAAADAAYAAAAHAAUAAAAAAAYAAAAHAAYAAAAAAAYAAAAHAAcAAAAAAAYAAAAIAP//AAAAAAEAAAAIAAAAAAAAAAEAAAAIAAEAAAABAAEAAAAIAAIAAAAAAAYAAAAIAAMAAAAAAAYAAAAIAAQAAAAAAAYAAAAIAAUAAAAAAAYAAAAIAAYAAAAAAAYAAAAIAAcAAAAAAAYAAAA=")
tile_set = SubResource("TileSet_gehps")

[node name="DungeonTilesDetails" type="TileMapLayer" parent="Background/DungeonTiles"]
tile_map_data = PackedByteArray("AAD9/wEAAAAGABAAAAAEAAIAAAAHABAAAAD//wIAAAAEABEAAAD//wUAAAABABYAAAACAAMAAAAAABQAAAADAAQAAAABABUAAAD8/wMAAAAAABUAAAABAAYAAAAKABMAAAA=")
tile_set = SubResource("TileSet_gehps")

[node name="Player" parent="." instance=ExtResource("2_ojtev")]
position = Vector2(-510, 503)

[node name="RogueType" parent="." instance=ExtResource("1_3au3l")]
offset_left = 236.0
offset_top = 487.0
offset_right = 268.0
offset_bottom = 519.0
scale = Vector2(10, 10)

[node name="BarbarianType" parent="." instance=ExtResource("3_in3f3")]
offset_left = 1083.0
offset_top = 362.0
offset_right = 1115.0
offset_bottom = 394.0
scale = Vector2(10, 10)
flip_h = false

[node name="MageType" parent="." instance=ExtResource("6_jnjga")]
offset_left = 512.0
offset_top = 367.0
offset_right = 544.0
offset_bottom = 399.0
scale = Vector2(10, 10)

[node name="KnightType" parent="." instance=ExtResource("7_7gxew")]
offset_left = 1424.0
offset_top = 510.0
offset_right = 1456.0
offset_bottom = 542.0
scale = Vector2(10, 10)
flip_h = false

[node name="Panel" type="Panel" parent="."]
offset_left = -14.0
offset_right = 1951.0
offset_bottom = 63.0

[node name="GemStats" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -782.0
offset_right = -742.0
offset_bottom = 40.0

[node name="Images" type="Control" parent="GemStats"]
anchors_preset = 0
offset_left = 130.0
offset_top = -4.0
offset_right = 170.0
offset_bottom = 36.0

[node name="Red" type="Sprite2D" parent="GemStats/Images"]
position = Vector2(697, 34)
scale = Vector2(2, 2)
texture = ExtResource("6_f0kvo")

[node name="Blue" type="Sprite2D" parent="GemStats/Images"]
position = Vector2(847, 34)
scale = Vector2(2, 2)
texture = ExtResource("7_1oj0d")

[node name="Green" type="Sprite2D" parent="GemStats/Images"]
position = Vector2(997, 34)
scale = Vector2(2, 2)
texture = ExtResource("8_f5bhh")

[node name="Yellow" type="Sprite2D" parent="GemStats/Images"]
position = Vector2(1147, 34)
scale = Vector2(2, 2)
texture = ExtResource("9_50p6t")

[node name="Coin1" type="Sprite2D" parent="GemStats/Images"]
position = Vector2(1297, 34)
scale = Vector2(2, 2)
texture = ExtResource("10_d0rf8")

[node name="Control" type="Control" parent="GemStats"]
anchors_preset = 0
offset_left = 130.0
offset_top = -4.0
offset_right = 170.0
offset_bottom = 36.0

[node name="RedLabel" type="Label" parent="GemStats/Control"]
layout_mode = 0
offset_left = 721.0
offset_top = 21.0
offset_right = 761.0
offset_bottom = 51.0
theme_override_fonts/font = ExtResource("11_4xv2l")
theme_override_font_sizes/font_size = 32
text = ": 9999"

[node name="BlueLabel" type="Label" parent="GemStats/Control"]
layout_mode = 0
offset_left = 871.0
offset_top = 21.0
offset_right = 961.0
offset_bottom = 51.0
theme_override_fonts/font = ExtResource("11_4xv2l")
theme_override_font_sizes/font_size = 32
text = ": 9999"

[node name="GreenLabel" type="Label" parent="GemStats/Control"]
layout_mode = 0
offset_left = 1021.0
offset_top = 21.0
offset_right = 1111.0
offset_bottom = 51.0
theme_override_fonts/font = ExtResource("11_4xv2l")
theme_override_font_sizes/font_size = 32
text = ": 9999"

[node name="YellowLabel" type="Label" parent="GemStats/Control"]
layout_mode = 0
offset_left = 1171.0
offset_top = 21.0
offset_right = 1261.0
offset_bottom = 51.0
theme_override_fonts/font = ExtResource("11_4xv2l")
theme_override_font_sizes/font_size = 32
text = ": 9999"

[node name="CoinsLabel" type="Label" parent="GemStats/Control"]
layout_mode = 0
offset_left = 1321.0
offset_top = 21.0
offset_right = 1411.0
offset_bottom = 51.0
theme_override_fonts/font = ExtResource("11_4xv2l")
theme_override_font_sizes/font_size = 32
text = ": 9999"

[node name="Material" type="Node2D" parent="."]
position = Vector2(1550, -142)
scale = Vector2(1.3, 1.3)

[node name="Wood" type="Sprite2D" parent="Material"]
position = Vector2(-14.9091, 134)
texture = ExtResource("12_d5rmp")

[node name="WoodLabel" type="Label" parent="Material"]
offset_left = -2.09092
offset_top = 123.0
offset_right = 42.9091
offset_bottom = 146.0
scale = Vector2(1.5, 1.5)
theme_override_fonts/font = ExtResource("11_4xv2l")
text = ": 9999"

[node name="Stone" type="Sprite2D" parent="Material"]
position = Vector2(85.0909, 131.818)
scale = Vector2(1.2, 1.2)
texture = ExtResource("13_041bv")

[node name="StoneLabel" type="Label" parent="Material"]
offset_left = 97.9092
offset_top = 123.0
offset_right = 142.909
offset_bottom = 146.0
scale = Vector2(1.5, 1.5)
theme_override_fonts/font = ExtResource("11_4xv2l")
text = ": 9999"

[node name="Iron" type="Sprite2D" parent="Material"]
position = Vector2(185.091, 134)
scale = Vector2(1.4, 1.4)
texture = ExtResource("14_w15ji")

[node name="IronLabel" type="Label" parent="Material"]
offset_left = 197.909
offset_top = 123.0
offset_right = 242.909
offset_bottom = 146.0
scale = Vector2(1.5, 1.5)
theme_override_fonts/font = ExtResource("11_4xv2l")
text = ": 9999"

[node name="BackToVillage" type="Button" parent="."]
offset_left = 34.0
offset_top = 982.0
offset_right = 474.0
offset_bottom = 1050.0
theme_override_fonts/font = ExtResource("11_4xv2l")
theme_override_font_sizes/font_size = 64
text = "Back to village"

[connection signal="pressed" from="BackToVillage" to="." method="_on_back_to_village_pressed"]
